[cxf-rt-ws-rm] improve test stability